# mass-mailing

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
mass_mailing_contact_active/: README.rst  __manifest__.py
mass_mailing_contact_active/models/: __init__.py  mailing_subscription.py
mass_mailing_contact_active/readme/: CONTRIBUTORS.md
mass_mailing_custom_unsubscribe/: README.rst  __manifest__.py
mass_mailing_custom_unsubscribe/controllers/: main.py
mass_mailing_custom_unsubscribe/i18n/: sl.po
mass_mailing_custom_unsubscribe/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
mass_mailing_custom_unsubscribe/tests/: test_ui.py
mass_mailing_event_registration_exclude/: README.rst  __manifest__.py
mass_mailing_event_registration_exclude/data/: event_state_data.xml
mass_mailing_event_registration_exclude/i18n/: it.po  sl.po
mass_mailing_event_registration_exclude/views/: mailing_mailing_views.xml
mass_mailing_list_dynamic/: README.rst  __manifest__.py
mass_mailing_list_dynamic/i18n/: da.po  mass_mailing_list_dynamic.pot  sv.po
mass_mailing_list_dynamic/models/: mailing_contact.py  mailing_list.py
mass_mailing_list_dynamic/readme/: CONTRIBUTORS.md
mass_mailing_partner/: README.rst  __manifest__.py  hooks.py
mass_mailing_partner/i18n/: am.po  ar.po  (+72 more)
mass_mailing_partner_subscription/: README.rst  __manifest__.py
mass_mailing_partner_title/: README.rst  __manifest__.py
mass_mailing_resend/: README.rst  __manifest__.py
mass_mailing_unique/: README.rst  __manifest__.py  hooks.py
setup/_metapackage/: pyproject.toml
(+45 files in other folders)
