[project]
name = "odoo-addons-oca-mass-mailing"
version = "18.0.20250725.0"
dependencies = [
    "odoo-addon-mass_mailing_custom_unsubscribe==18.0.*",
    "odoo-addon-mass_mailing_list_dynamic==18.0.*",
    "odoo-addon-mass_mailing_partner==18.0.*",
    "odoo-addon-mass_mailing_resend==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
