[project]
name = "odoo-addons-oca-mass-mailing"
version = "19.0.20260416.0"
dependencies = [
    "odoo-addon-mass_mailing_partner==19.0.*",
    "odoo-addon-mass_mailing_partner_title==19.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 19.0",
]
