[project]
name = "odoo-addons-oca-mass-mailing"
version = "19.0.20260618.0"
dependencies = [
    "odoo-addon-mass_mailing_list_dynamic==19.0.*",
    "odoo-addon-mass_mailing_partner==19.0.*",
    "odoo-addon-mass_mailing_partner_title==19.0.*",
    "odoo-addon-mass_mailing_resend==19.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 19.0",
]
